deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallet-flo-deployment
  namespace: wallet-flo
  labels:
    app: wallet-flo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallet-flo
  template:
    metadata:
      labels:
        app: wallet-flo
    spec:
      containers:
        - name: wallet-flo
          image: europe-west1-docker.pkg.dev/borderless-money-455715/project-repo/wallet-flo:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
