deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallet-flo-service
  namespace: wallet-flo
spec:
  selector:
    app: wallet-flo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
